@@ -1,10 +1,21 @@
+Tue Sep  6 11:42:38 1994  Ian Lance Taylor  (ian@sanguine.cygnus.com)
+
+	* config/tc-mips.c (mips_cpu): New static variable.
+	(insns_since_cache_access): New static variable.
+	(md_begin): Set mips_cpu as well as mips_isa.
+	(append_insn): If mips_cpu is 4600, require four nop instructions
+	between an instruction which accesses the cache and certain CACHE
+	instructions.  Keep track of the number of instructions seen since
+	an instruction which accesses the cache.
+	(md_parse_option): Set mips_cpu as well as mips_isa.
+
 Mon Sep  5 07:09:00 1994  Ken Raeburn  (raeburn@kr-pc.cygnus.com)
 
 	* doc/Makefile.in (VPATH): Define using @srcdir@.
 	(prefix, program_transform_name, exec_prefix): Use autoconf style
 	@-substitutions.
 
-Sun Sep 04 17:58:10 1994	Richard Earnshaw (rwe@pegasus.esprit.ec.org)
+Sun Sep 04 17:58:10 1994  Richard Earnshaw (rwe@pegasus.esprit.ec.org)
 
 	* config/ho-riscix.h, config/tc-arm.c, config/tc-arm.h: New files
 	* configure.in: Recognize the arm.
